--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="color-scheme" content="dark light">
+  <meta name="color-scheme" content="dark light" />
+  <link rel="icon" href="./images/favicon.ico" sizes="any">
+  <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="./styles/variables.css">
   <link rel="stylesheet" href="./fonts/fonts.css">
   <link rel="stylesheet" href="./styles/globals.css">
@@ -42,21 +44,22 @@
     <h1 class="header__title title">no focus</h1>
     <div class="header__paragraph title-decor">
       <p class="header_paragraph">Что делать, когда не можешь делать ничего</p>
-      <p class="header___paragraph">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      <p class="header_paragraph">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
     </div>
   </header>
   <main class="content">
     <section class="article article-type-focus">
-      <h2 class="section__title focus-article__title">Почему сосредоточиться так сложно</h2>
+      <h2 class="section__title">Почему сосредоточиться так сложно</h2>
       <div class="articles-list article__list_focus">
-        <article class="article-block">
-          <h3 class="article__subtitle focus-article__subtitle title-decor">Многозадачность</h3>
-          <p class="article__text article__text-type-focus">Особенно сложно сосредоточиться,
+        <article class="article-block article-block_focus">
+          <h3 class="article__subtitle title-decor">Многозадачность</h3>
+          <p class="article__text ">Особенно сложно сосредоточиться,
             когда задач много и все они — важные.
             Где же легендарная многозадачность, когда
             она так нужна вам (и всем нанимающим менеджерам этого мира)?
             А дело в том, что её просто не существует. Исследователи
-            <a class="article__link" href="#">выяснили</a>, что мозгу тяжело концентрироваться даже на двух
+            <a class="article__link" href="https://dana.org/news-and-insights/">выяснили</a>, что мозгу тяжело
+            концентрироваться даже на двух
             делах одновременно. А когда в поле внимания попадает несколько
             важных задач, организм паникует и выделяет кортизол и
             адреналин — «гормоны стресса». Из-за этого мы работаем
@@ -64,8 +67,8 @@
           </p>
         </article>
         <article class="article-block">
-          <h2 class="article__subtitle focus-article__subtitle title-decor">Дофамин</h2>
-          <p class="article__text article__text-type-focus">С гормонами стресса всё понятно, но дальше —
+          <h3 class="article__subtitle  title-decor">Дофамин</h3>
+          <p class="article__text">С гормонами стресса всё понятно, но дальше —
             ещё интереснее. В нашей невозможности сосредоточиться
             замешана и полная противоположность стрессу — дофамин.
             Это вещество участвует в системе вознаграждения мозга
@@ -78,11 +81,11 @@
       </div>
     </section>
     <section class="article article-type-distraction">
-      <h2 class="section__title distraction-article__title">Что снижает концентрацию внимания?</h2>
+      <h3 class="section__title">Что снижает концентрацию внимания?</h3>
       <div class="articles-list article__list_distraction">
         <article class="article-block">
-          <h3 class="article__subtitle distraction-article__subtitle title-decor">Многозадачность</h3>
-          <p class="article__text article__text-type-distraction">Как концентрация может снижаться
+          <h3 class="article__subtitle  title-decor">Многозадачность</h3>
+          <p class="article__text">Как концентрация может снижаться
             из-за… концентрации? Любая стрессовая ситуация
             (и резко меняющийся мир в целом) заставляет наш мозг
             постоянно «сканировать» окружающую среду на предмет
@@ -91,8 +94,8 @@
             и она может не выдержать, если не давать ей отдохнуть.</p>
         </article>
         <article class="article-block">
-          <h2 class="article__subtitle distraction-article__subtitle title-decor">Еда</h2>
-          <P class="article__text article__text-type-distraction">«Быстрые углеводы» — сахар, белый хлеб,
+          <h3 class="article__subtitle  title-decor">Еда</h3>
+          <P class="article__text ">«Быстрые углеводы» — сахар, белый хлеб,
             сладости — молниеносно доставляют в мозг энергию и помогают ему
             лучше работать. Но уходит эта энергия также быстро, как и приходит.
             А мы в результате попадаем на «углеводные качели»: как только
@@ -100,8 +103,8 @@
             и сонливость. И хотим ещё больше быстрых углеводов.</P>
         </article>
         <article class="article-block">
-          <h2 class="article__subtitle distraction-article__subtitle title-decor">Гаджеты</h2>
-          <p class="article__text article__text-type-distraction">Да-да, это та самая ситуация,
+          <h3 class="article__subtitle  title-decor">Гаджеты</h3>
+          <p class="article__text ">Да-да, это та самая ситуация,
             когда на экране ноутбука — код, в наушниках — подкаст,
             а на компьютере фоном — ещё и видео с забавными утятами.
             В результате мозг пытается переключиться с одной задачи на
@@ -113,14 +116,14 @@
       </div>
     </section>
     <section class="article article-type-tips">
-      <h2 class="section__title  tips-article__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше
+      <h2 class="section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше
         трёх секунд)</h2>
       <div class="articles-list article__list_tips">
         <article class="article-block">
           <h3 class="article__section-title article__section-title-type-tips title-decor">5 простых (на самом деле не
             очень) советов</h3>
-          <h4 class="article__subtitle article__subtitle-type-tips title-decor">Представьте небо и облака</h4>
-          <p class="article__text article__text-type-tips">Или листья в ручье. Тут дело
+          <h4 class="article__subtitle title-decor">Представьте небо и облака</h4>
+          <p class="article__text">Или листья в ручье. Тут дело
             в лёгкой медитации, которая помогает успокоиться. Ведь
             часто именно тревожные мысли о сложных задачах как раз
             и мешают эти сложные задачи делать. В такие моменты можно
@@ -132,8 +135,8 @@
             будущего.</p>
         </article>
         <article class="article-block">
-          <h4 class="article__subtitle article__subtitle-type-tips title-decor">Включите музыку</h4>
-          <p class="article__text article__text-type-tips">Но не любую, и не любимую.
+          <h4 class="article__subtitle  title-decor">Включите музыку</h4>
+          <p class="article__text">Но не любую, и не любимую.
             Любимая может быть связана с сильными положительными
             эмоциями, которые тоже очень сильно отвлекают. Подойдёт
             тихая, спокойная, умеренно-ритмичная. Можно вообще
@@ -141,9 +144,10 @@
             нейромузыкой.</p>
         </article>
         <article class="article-block">
-          <h4 class="article__subtitle article__subtitle-type-tips title-decor">Прогуляйтесь</h4>
-          <p class="article__text article__text-type-tips">Или даже пробегитесь. Лучше
-            найти парк или лес: один эксперимент <a class="article__link" href="#">показал</a>, что созерцание
+          <h4 class="article__subtitle  title-decor">Прогуляйтесь</h4>
+          <p class="article__text">Или даже пробегитесь. Лучше
+            найти парк или лес: один эксперимент <a class="article__link"
+              href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание
             природы повышает концентрацию,
             в то время как после просмотра
             городских пейзажей она наоборот
@@ -156,15 +160,15 @@
             вариант.</p>
         </article>
         <article class="article-block">
-          <h4 class="article__subtitle article__subtitle-type-tips title-decor">Хорошо ешьте</h4>
-          <p class="article__text article__text-type-tips">Мы — не ваша бабушка, но это правда важно.
+          <h4 class="article__subtitle  title-decor">Хорошо ешьте</h4>
+          <p class="article__text ">Мы — не ваша бабушка, но это правда важно.
             Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием
             клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
         </article>
         <article class="article-block">
-          <h4 class="article__subtitle article__subtitle-type-tips title-decor">Читайте</h4>
-          <p class="article__text article__text-type-tips">Настоящие бумажные книги. Это правда помогает
+          <h4 class="article__subtitle  title-decor">Читайте</h4>
+          <p class="article__text">Настоящие бумажные книги. Это правда помогает
             с концентрацией: чтобы прочитать пост в соцсети,
             достаточно нескольких минут или даже секунд. А вот
             интересная книга способна затянуть и на несколько
@@ -175,23 +179,33 @@
     </section>
     <section class="article__content_images">
       <h2 class="article__images_title title-decor">А можно в картинках?</h2>
-      <div class="container__images">
-        <img src="./images/sunset.png"
-          alt="изображение заката с птицами над водой и горами на заднем плане в графически ярком стиле"
-          class="article__images_item image-landscape">
-        <img src="./images/ice-cream.png" alt="изображение десерта в миске с несколькими шариками мороженого "
-          class="article__images_item image-food">
-        <img src="./images/tape.png" alt="изображение в графическом стиле представлена касета в стиле 90-х годов"
-          class="article__images_item image-retro" loading="lazy">
-        <img src="./images/books.png"
-          alt="изображение в графическом стиле представлена стопка книг в ярких оттенках на вершине которой стоит кружка "
-          class="article__images_item image-books" loading="lazy">
-        <img src="./images/street.png" alt="изображение в графическом стиле  яркая и стилизованная городская улица "
-          class="article__images_item image-city" loading="lazy">
-      </div>
+      <ul class="image-list">
+        <li class="image-list__item">
+          <img src="./images/sunset.png"
+            alt="изображение заката с птицами над водой и горами на заднем плане в графически ярком стиле"
+            class="article__images_item image-landscape">
+        </li>
+        <li class="image-list__item">
+          <img src="./images/ice-cream.png" alt="изображение десерта в миске с несколькими шариками мороженого "
+            class="article__images_item image-food">
+        </li>
+        <li class="image-list__item">
+          <img src="./images/tape.png" alt="изображение в графическом стиле представлена касета в стиле 90-х годов"
+            class="article__images_item image-retro" loading="lazy">
+        </li>
+        <li class="image-list__item">
+          <img src="./images/books.png"
+            alt="изображение в графическом стиле представлена стопка книг в ярких оттенках на вершине которой стоит кружка "
+            class="article__images_item image-books" loading="lazy">
+        </li>
+        <li class="image-list__item">
+          <img src="./images/street.png" alt="изображение в графическом стиле яркая и стилизованная городская улица "
+            class="article__images_item image-city" loading="lazy">
+        </li>
+      </ul>
     </section>
   </main>
-  <footer class="footer decorated-zone">
+  <footer class="footer footer_decorated-zone">
     <h2 class="footer__title">focus</h2>
   </footer>
 </body>
